--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-html, body, body > *{ padding: 0; margin: 0;}
+html, body, body > *{ padding: 0; margin: 0; width: 100vw;}
 h1, h2{
     color: teal;
     font-size: 2em;
