--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,25 @@ h1, h2{
     color: teal;
     font-size: 2em;
 }
+#message{
+    display: none;
+    position: relative;
+    padding: 20px;
+    margin-top: 10px;
+}
+.valid{
+    color: green;
+}
+.valid:before{
+    position: relative;
+    left: -35px;
+    content: "&#10004;";
+}
+.invalid{
+    color: red;
+}
+.invalid:before{
+    position: relative;
+    left: -35px;
+    content: "&#10006;";
+}
