--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,11 @@ h1, h2{
     color: teal;
     font-size: 2em;
 }
+ul, li, a{
+    list-style: none;
+    color: black;
+    text-decoration: none;
+}
 #message{
     display: none;
     position: relative;
